--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
+    "morgan": "^1.10.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
